style.css
/* ... */
.gallery-columns-2 .gallery-item {
	max-width: 50%;
}

.gallery-columns-3 .gallery-item {
	max-width: 33.33%;
}

.gallery-columns-4 .gallery-item {
	max-width: 25%;
}

.gallery-columns-5 .gallery-item {
	max-width: 20%;
}

.gallery-columns-6 .gallery-item {
	max-width: 16.66%;
}

.gallery-columns-7 .gallery-item {
	max-width: 14.28%;
}

.gallery-columns-8 .gallery-item {
	max-width: 12.5%;
}

.gallery-columns-9 .gallery-item {
	max-width: 11.11%;
}

.gallery-caption {
	display: block;
}

/*--------------------------------------------------------------
13.0 Plugins
--------------------------------------------------------------*/

/*--------------------------------------------------------------
13.1 Column Shortcodes
--------------------------------------------------------------*/

#content .content-column {
	margin-top: 1.5em;
	padding: 0 17.5px;
}

	#content .content-column.full_width {
		padding: 0;
	}

	#content p + .content-column,
	#content .clear_column + .content-column {
		padding-left: 0;
	}

	#content .content-column.last_column {
		padding-right: 0;
	}

/* Breakpoint in the plugin: .entry-content { max-width: 444px; } */
@media all and (max-width: 600px), (min-width: 741px) and (max-width: 904px) {
	#content .content-column {
		clear: both;
		width: 100%;
		padding: 0;
	}
}

